checkpoint, conver test to junit5